# pnda-mcp

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
celery/: app.py  run_tasks.py  run_worker.sh
etl/: celery_worker.sh  cron.sh  logger_config.py  run_tasks.py  run_worker.sh
etl/tasks/: __init__.py  app.py  extract_tasks.py  load_tasks.py  pinecone_tasks.py  transform_tasks.py
examples/: analysis_full_EN.ipynb  analysis_full_ES.ipynb  analysis_quick_EN.ipynb  analysis_quick_ES.ipynb
